--- a/alonePerson/main.html
+++ b/alonePerson/main.html
@@ -8,15 +8,10 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<div class="cards">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
+<div class="man">
+    <span class="head"></span>
+    <span class="body"></span>
+    <span class="feet"></span>
 </div>
 </body>
 </html>
