smily cat update

--- a/#03_smileyCat/main.html
+++ b/#03_smileyCat/main.html
@@ -9,15 +9,39 @@
     <div class="cat">
         <div class="head">
             <div class="pattern"></div>
+
             <div class="eyes">
                 <div class="eye">
-                    <div class="eye-socket"></div>
+                    <div class="eye-socket">
+                        <div></div>
+                    </div>
                     <div class="eyeliner"></div>
+                    <div class="eye-red"></div>
                 </div>
                 <div class="eye">
-                    <div class="eye-socket"></div>
+                    <div class="eye-socket">
+                        <div></div>
+                    </div>
                     <div class="eyeliner"></div>
+                    <div class="eye-red"></div>
                 </div>
+            </div>
+            <div class="beard">
+                <div class="beard-left">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="beard-right">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+
             </div>
             <div class="nose">
             </div>
